                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-02-2006 changed: "Delete" and "Rename" in the context menu are only enabled if the share supports them
 - 18-02-2006 changed: iTunes playlists now adhere to the "shuffle playlists on load" option if you use PLAY on them
 - 18-02-2006 changed: Keyboard updates all buttons with the same id when you change from Symbols -> Caps -> Lower case.
 - 18-02-2006 fixed: Video Calibration activated via the video OSD wasn't working.
 - 18-02-2006 fixed: Possible crashes in charset conversion.
 - 18-02-2006 changed: MultiImage only reads dir once instead of whenever it becomes visible.
 - 18-02-2006 fixed: Radiobutton nofocus image wasn't resized correctly (Thanks Nuka1195).
 - 18-02-2006 fixed: Volume and Seekbars could disappear and not reappear on switch from Fullscreen -> GUI.
 - 18-02-2006 fixed: WindowClose animations on DialogSelect and SettingsCategory windows.
 - 17-02-2006 changed: Update database -> Rescan database in strings.xml
 - 17-02-2006 fixed: my programs. don't try to launch nonexisting entries.
 - 17-02-2006 added: <radiowidth>, <radioheight>, <radioposx>, <radioposy> tags to radiobuttons.
 - 17-02-2006 added: Skin.SetString(), Skin.SetImage(), Skin.SetPath() and Skin.ResetSettings built in functions.  Also made the multiimage control accept an <info> tag for it's path, and added Skin.String() as an info label/image/path.
 - 16-02-2006 removed: the Shuffle button from Music Library
 - 16-02-2006 changed: In Music, the PLAY action and PLAY ITEM context menu options on a folder now clear the Now Playing window, queue the items, and start playback immediately
 - 16-02-2006 added: Update database to my programs.