@@ -9,17 +9,16 @@
 CGUIWindowSettings::CGUIWindowSettings(void)
     : CGUIWindow(WINDOW_SETTINGS_MENU, "Settings.xml")
 {
-  m_iLastControl = -1;
 }
 
 CGUIWindowSettings::~CGUIWindowSettings(void)
-{}
+{
+}
 
 bool CGUIWindowSettings::OnAction(const CAction &action)
 {
   if (action.wID == ACTION_PREVIOUS_MENU)
   {
-    m_iLastControl = -1;
     m_gWindowManager.PreviousWindow();
     return true;
   }
@@ -31,32 +30,6 @@ bool CGUIWindowSettings::OnMessage(CGUIMessage& message)
 {
   switch ( message.GetMessage() )
   {
-  case GUI_MSG_WINDOW_DEINIT:
-    {
-    }
-    break;
-
-  case GUI_MSG_WINDOW_INIT:
-    {
-      int iFocusControl = m_iLastControl;
-
-      CGUIWindow::OnMessage(message);
-
-      if (iFocusControl > -1)
-      {
-        SET_CONTROL_FOCUS(iFocusControl, 0);
-      }
-
-      return true;
-    }
-    break;
-
-  case GUI_MSG_SETFOCUS:
-    {
-      m_iLastControl = message.GetControlId();
-    }
-    break;
-
   case GUI_MSG_CLICKED:
     {
       int iControl = message.GetSenderId();
